--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
 </head>
 <body>
 
+    <img class="logo" src="./assets/imagem.png" alt="gerador de senha logo"/>
+    
+    <main class="container-input">
+        <span>Tamanho <span id="valor"></span> caracteres </span>
+        <input id="slider" class="slider" type="range" min="5" max="30" value="15"/>
+        <button id="button" class="button-cta">Gerar senha</button>
+    </main>
 
     
+    <div id="container-password" class="container-password hide">
+        <span class="title">Sua senha gerada foi:</span>
+        <span id="password" class="password">1213331</span>
+        <span class="tooltip">Clique na senha para copiar</span>
+    </div>
 
 
     <script src="./script.js"></script>
