--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <div id="container-password" class="container-password hide">
         <span class="title">Sua senha gerada foi:</span>
-        <span id="password" class="password">1213331</span>
+        <span id="password" class="password"></span>
         <span class="tooltip">Clique na senha para copiar</span>
     </div>
 
