--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main class="container-input">
         <span>Tamanho <span id="valor"></span> caracteres </span>
         <input id="slider" class="slider" type="range" min="5" max="30" value="15"/>
-        <button id="button" class="button-cta">Gerar senha</button>
+        <button id="button" class="button-cta" onclick="generatePassword()">Gerar senha</button>
     </main>
 
     
