--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
     <main class="container-input">
         <span>Tamanho <span id="valor"></span> caracteres </span>
         <input id="slider" class="slider" type="range" min="5" max="30" value="15"/>
+
         <button id="button" class="button-cta" onclick="generatePassword()">Gerar senha</button>
     </main>
 
     
-    <div id="container-password" class="container-password hide">
+    <div id="container-password" onclick="copyPassword()" class="container-password hide">
         <span class="title">Sua senha gerada foi:</span>
         <span id="password" class="password"></span>
-        <span class="tooltip">Clique na senha para copiar</span>
     </div>
 
 
     <script src="./script.js"></script>
 </body>
 </html>
+
